# cgp-patterns

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  book.toml  flake.nix
.github/workflows/: build.yaml
content/: SUMMARY.md  abstract-error-types.md  abstract-logger.md  algebraic-effects.md  associated-contexts.md  associated-type-specialization.md  associated-types.md  async-generic.md  auto-consumer-impl.md  auto-traits.md  blanket-implementations.md  cgp-in-haskell.md  check-traits.md  component-macros.md  consumer-provider-link.md  consumer.md  context-generic-providers.md  context.md  debugging-support.md  debugging-techniques.md  delegated-error-raiser.md  dynamic-typed-programming.md  error-detail-types.md  error-handler-delegation.md  error-handling.md  error-raisers.md  error-reporting.md  error-wrapping.md  field-accessors.md  from-errors.md  fully-abstract-programs.md  generic-accessor-providers.md  impl-side-dependencies.md  impl-side-generic-types.md  introduction.md  logger-delegation.md  logging-entry-types.md  ml-modules.md  new-type-wrappers.md  object-oriented-programming.md  (+5 more)
src/: lib.rs  main.rs
