[package]
name = "cgp-patterns"
version = "0.1.0"
edition = "2021"

[dependencies]
cgp = { version = "0.2.0" }
cgp-error-anyhow = { version = "0.2.0" }
serde = {version = "1", features = ["derive"] }
itertools = "0.14.0"
serde_json = "1"
anyhow = "1"
datetime = "0.5.2"
sha1 = "0.10.6"
reqwest = { version = "0.12.12", features = [ "blocking", "json" ] }


[patch.crates-io]
cgp                         = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-component               = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-component-macro         = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-component-macro-lib     = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-field-macro             = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-field-macro-lib         = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-error-anyhow            = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git", branch = "getter-component" }
